# mtga_viz

./: .gitignore  README.md  pyproject.toml
data/: win_loss.csv  win_loss_mtg_ds.numbers
data/dicts/: test_arch.json  test_decks.json  test_general.json
data/league/: 2026_season_2.csv
data/metagame_challenge/: challenge_test_file.csv
data/tournament/: 2026_04_26.csv  2026_05_17.csv  2026_05_28_meta.csv  2026_06_13.csv  2026_06_27.csv  2026_spring.csv
figs/: archetype_share.py  dataframes.py  manim.cfg  scatter_wr_vs_share.py  test.py
figs/output/Tex/: 01e09b14c72c06fc.tex  02d15e751e9f2024.tex  055f3c90880ff46f.tex  074aa1f46e49cc20.tex  0752b89ea275d662.tex  12a0be39b683d28d.tex  14d2ff8ee65cb5a9.tex  14e331139c6357f0.tex  1722196add05ef94.tex  1a2f455e8225be52.tex  (+109 more)
mtga_viz/: __init__.py
mtga_viz/core/: database_manipulation.py  stats.py  tables.py
mtga_viz/data/: data_manipulation.py  data_viz_preparation.py
mtga_viz/ext/: database_manipulation.py  stats.py
mtga_viz/tables/: challenge_tables.py  common_tables.py  plot_dicts.py  tournament_tables.py
mtga_viz/utils/: challenge_helpers.py  common_helpers.py  constants.py  helpers.py  tournament_helpers.py
mtga_viz/viz/: constants.py  constants_viz.py  frame.py  legend.py  pie_chart.py  pin.py  result_histo.py  scatter_wr_vs_share.py
notebooks/: archetype_definition.py  basic_tables.ipynb  cleaning_database.ipynb  tables.ipynb  tables_challenge.ipynb  test_manipulation.ipynb  testing_tournament.ipynb
scrapper/: README.md  cookie.py  scrapper.py
scrapper/test/: test.csv  test_none.csv
(+27 files in other folders)
