
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtga_viz"
version = "0.0.1"
description = "Simple data visualisation tools for MTG Arena"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "numbers-parser>=4.4",
    "plotly>=5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mtga_viz*"]
namespaces = false